# 3dgs

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cpp/: CMakeLists.txt
cpp/src/render/: gaussian.hpp
cpp/src/tools/: convert_colmap.cpp  validate_geom.cpp
cpp/src/viewer/: main.cpp
docs/: format.md
gaussian/: gaussian.cpp  gaussian_splat.hpp
python/: pyproject.toml
python/src/gsplat/: __init__.py  colmap.py  config.py  dataset.py  gaussians.py  losses.py  ply.py  renderer.py
scripts/: colmap_torch.py  parse_colmap.cpp  parse_colmap.hpp  validate_geom.cpp
sparse/: project.ini
